--- a/themes/nexT/source/css/_custom/custom.styl
+++ b/themes/nexT/source/css/_custom/custom.styl
@@ -4,9 +4,10 @@
 margin-top: 60px;
 margin-bottom: 60px;
 padding: 25px;
--webkit-box-shadow: 0 0 5px rgba(202, 203, 203, .5);
--moz-box-shadow: 0 0 5px rgba(202, 203, 204, .5);
+-webkit-box-shadow: 0 0 5px rgba(202, 203, 203, 0.7);
+-moz-box-shadow: 0 0 5px rgba(202, 203, 204, 0.7);
 }
+
 
 //设置背景图片
 //body {
@@ -21,6 +22,12 @@ padding: 25px;
 //   background: #fff;
 //   opacity: 0.9;
 //}
+
+// 阴影宽度
+.container .main-inner {
+    width: 1100px;
+}
+
 
 //文章内链接文本样式
 .post-body p a{
