--- a/themes/nexT/source/css/_schemes/Mist/index.styl
+++ b/themes/nexT/source/css/_schemes/Mist/index.styl
@@ -69,8 +69,7 @@
 .footer {
   margin-top: 80px;
   padding: 10px 0;
-  background: url('/images/headbg.jpg') repeat !important; 
-  //background: rgba(#CD3278,0.3) none repeat scroll !important;
+  background: rgb(#eaeaea) repeat !important; 
   color: $grey-dim;
 }
 .footer-inner {
