--- a/themes/nexT/source/css/_schemes/Mist/_header.styl
+++ b/themes/nexT/source/css/_schemes/Mist/_header.styl
@@ -1,8 +1,7 @@
 // Header
 // --------------------------------------------------
 .header { 
-  //background: url('/images/headbg.jpg') repeat !important; 
-  //background: rgba(#f0c1d6,1) none repeat scroll !important; 
+  background: rgba(#eaeaea,1) none repeat scroll !important; 
 }
 .header-inner {
   clearfix();
